[gd_scene format=3 uid="uid://dcw3ebt7gvj0j"]

[ext_resource type="Script" uid="uid://c2krik5hj3tsg" path="res://scripts/intro/intro_sequence.gd" id="1_intro_seq"]

[node name="IntroSequence" type="Control" unique_id=1349507135]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_intro_seq")

[node name="LogoContainer" type="Control" parent="." unique_id=1153301820]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 4.0
offset_right = 13.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GlowEffect" type="ColorRect" parent="LogoContainer" unique_id=1448310824]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -60.0
offset_right = 350.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(350, 60)
mouse_filter = 2
color = Color(1, 0.85, 0.4, 0)

[node name="LogoLabel" type="Label" parent="LogoContainer" unique_id=1991578611]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -60.0
offset_right = 350.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 72
text = "CARGO ESCAPE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SceneContainer" type="Control" parent="." unique_id=2139634999]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CrawlLabel" type="Label" parent="SceneContainer" unique_id=1248297485]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.85, 0.9, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.8)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 36
text = "In the lawless sectors of space..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleContainer" type="Control" parent="." unique_id=500082156]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="TitleContainer" unique_id=814617040]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -80.0
offset_right = 400.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 50)
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 80
text = "CARGO ESCAPE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TaglineLabel" type="Label" parent="TitleContainer" unique_id=1276303412]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 40.0
offset_right = 300.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.7)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 28
text = "Loot. Escape. Survive."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkipHint" type="Label" parent="." unique_id=1869626413]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "Press SPACE to skip"
horizontal_alignment = 1
vertical_alignment = 1
